--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,24 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   firebase_core: ^2.7.1
+  firebase_auth: ^4.2.10
+  firebase_storage: ^11.0.15
+  cloud_firestore: ^4.4.4
+  uuid: ^3.0.7
+  hooks_riverpod: ^2.3.1
+  font_awesome_flutter: ^10.4.0
+  flutter_facebook_auth: ^5.0.8
+  google_sign_in: ^6.0.2
+  image_picker: ^0.8.7
+  image: ^4.0.15
+  flutter_hooks: ^0.18.6
+  collection: ^1.17.0
+  intl: ^0.17.0
+  video_thumbnail: ^0.5.3
+  video_player: ^2.6.0
+  lottie: ^2.2.0
+  share_plus: ^6.3.1
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
