--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,3 +41,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/animations/loading.json
+    - assets/animations/no_data_found.json
+    - assets/animations/empty.json
+    - assets/animations/error.json
+    - assets/animations/small_error.json
